--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "banking",
+  "name": "e-commerce",
   "version": "1.0.0",
-  "description": "Banking Website",
+  "description": "E-commerce Website",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Ratul Ghosh",
+  "author": "Ratul Ghosh and Dheeman Dutta",
   "license": "ISC",
   "engines": {
     "node": "14.16.0"
